Footer Fix  and OverFlowfix
Footer section fixed with mail and phone number clickable

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -46,6 +46,7 @@ nav a {
 
 nav a:hover {
   color: var(--secondaryColor);
+  cursor: pointer;
 }
 
 header .nav-btn {
